--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,7 @@ body {
   border-radius: 8px;
   background: #fafbfc;
   padding: 20px;
+      padding-top: 0px;
   margin-top: 8px;
   color: #222; /* Added color property */
 }
