--- a/src/App.css
+++ b/src/App.css
@@ -128,7 +128,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  background: rgb(227, 210, 210);
+  background: #ADD8E6;
   color: #fff;
   font-size: 2rem;
   font-weight: bold;
@@ -197,7 +197,7 @@ body {
   margin-top: 1.5rem;   /* This should match or slightly exceed .top-banner height */
   margin-bottom: 0.5rem;
   font-weight: 500;
-  letter-spacing: 1px;
+  /* letter-spacing: 1px; */
 }
 
 .insurance-grid {
