--- a/src/App.css
+++ b/src/App.css
@@ -174,10 +174,12 @@ body {
 .footer {
   width: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  margin-top: 2rem;
-  padding-bottom: 2rem;
+  /* margin-top: 2rem;
+  padding: 2rem 0;
+  height: 200px;  */
 }
 
 .playstore-link {
