--- a/src/FeedbackPopup.css
+++ b/src/FeedbackPopup.css
@@ -83,3 +83,9 @@
     outline: 2px solid #80bdff;
     outline-offset: 2px;
 }
+
+.submit-btn:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+  opacity: 0.6;
+}
